--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,21 @@
 <title>Rate Movie</title>
 </head>
 <body>
+
 	<table>
 	<tr>
-	<th></th>
+		<th>Name</th>
+		<th>Year</th>
+		<th>Length (mins)</th>
+		<th>Rating</th>
 	</tr>
-	<tr th:each="rating : ${ratings}">
-	<td th:text=${rating.movie.title}></td>
-	</tr>
+		<tr th:each="movie : ${movies}">
+			<td th:text=${movie.title}></td>
+			<td th:text=${movie.year}></td>
+			<td th:text=${movie.lengthInHoursAndMinutes}></td>
+			</td>
+		</tr>
 	</table>
+
 </body>
 </html>
