--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <head>
 <title>Rate Movie</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
-
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.7.0/font/bootstrap-icons.css}" />
+	<link th:rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 
@@ -17,12 +18,29 @@
 	</tr>
 		<tr th:each="movie : ${movies}">
 			<td th:text=${movie.title}></td>
-			<td th:text=${movie.year}></td>
+			<td th:text=${movie.year}></td>			
 			<td th:text=${movie.lengthInHoursAndMinutes}></td>
-			<td th:text="${movie.rateCount} > 0 ? ${movie.avgRating} : ''"></td>
+			<td>
+				<div th:switch="${movie.avgRating}">
+					<span th:case="4.5">
+						<i th:each="i : ${#numbers.sequence(1, 4)}" th:class="'bi bi-star-fill'"></i><i th:class="'bi bi-star-half'"></i>
+					</span>
+					<span th:case="3.5">
+						<i th:each="i : ${#numbers.sequence(1, 3)}" th:class="'bi bi-star-fill'"></i><i th:class="'bi bi-star-half'"></i><i th:class="'bi bi-star'"></i>
+					</span>
+					<span th:case="2.5">
+						<i th:each="i : ${#numbers.sequence(1, 2)}" th:class="'bi bi-star-fill'"></i><i th:class="'bi bi-star-half'"></i><i th:each="i : ${#numbers.sequence(1, 2)}" th:class="'bi bi-star'"></i>
+					</span>
+					<span th:case="1.5">
+						<i th:class="'bi bi-star-fill'"></i><i th:class="'bi bi-star-half'"></i><i th:each="i : ${#numbers.sequence(1, 3)}" th:class="'bi bi-star'"></i>
+					</span>
+					<span th:case="*">
+						<i th:each="i : ${#numbers.sequence(0, 4)}" th:class="${i} < ${movie.avgRating} ? 'bi bi-star-fill' : 'bi bi-star'"></i>
+					</span>
+				</div>
+			</td>
 			<td th:text=${movie.rateCount}></td>
 		</tr>
 	</table>
-
 </body>
 </html>
