--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,3 +2,12 @@
 	color: rgb(155, 186, 110);
 }
 
+a {
+	text-decoration: none;
+	color:black;
+}
+
+a:hover {
+	background-color: rbg(0, 0, 0);
+	cursor: pointer;
+}
