--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<button>Add New Genre</button>
+	<a href="/addgenre"><button>Add New Genre</button></a>
 	<table>
 		<tr>
 			<th>Genre</th>
@@ -14,8 +14,8 @@
 		</tr>
 		<tr th:each="genre : ${genres}">
 			<td th:text=${genre.name}></td>
-			<td><button>Rename</button></td>
-			<td><button>Delete</button></td>
+			<td><a th:href="@{/renamegenre/{id}(id=${genre.id})}"><button>Rename</button></a></td>
+			<td><a th:href="@{/deletegenre/{id}(id=${genre.id})}"><button>Delete</button></a></td>
 		</tr>
 	</table>
 	
