--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <title>Rate Movie</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
@@ -17,7 +17,9 @@
 		<th>Ratings</th>
 	</tr>
 		<tr th:each="movie : ${movies}">
-			<td th:text=${movie.title}></td>
+			<td>
+				<a th:href="@{/movie/{id}(id=${movie.movieId})}" th:text=${movie.title}></a>
+			</td>
 			<td th:text=${movie.year}></td>			
 			<td th:text=${movie.lengthInHoursAndMinutes}></td>
 			<td>
