--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -4,7 +4,7 @@
 <title>Rate Movie</title>
 </head>
 <body>
-	
+	<a href="/">Back to index</a>
 	<h1 th:text=${movie.title}></h1>
 	<ul>
 		<li th:text="'Year - ' + ${movie.year}"></li>
