--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -18,9 +18,23 @@
 		</li>
 	</ul>
 		
-	<ul>
-		<li>Ratings?</li>
-	</ul>
+	<h2>Rate</h2>
+	
+	<form action="/rate" method="POST">
+	<input type="range" min="1" max="5" /><br />
+	<input type="text" max="250" />	<br />
+	<input type="submit" value="Rate" />
+	</form>
+	
+	<h2>Ratings</h2>
+	
+	<table>
+	<tr th:each="rating : ${movie.ratings}">
+	<td th:text=${rating.user.name}></td>
+	<td th:text=${rating.rating}></td>
+	<td th:text=${rating.comment}></td>
+	</tr>
+	</table>
 
 </body>
 </html>
