Added add movie page and fixed bugs

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,10 @@
 
 	<nav>
 	<a href="/genres">Genres</a>
+	<a href="/users">Users</a>
 	</nav>
+	
+	<a href="/addmovie"><button>Add Movie</button></a>
 
 	<table class="table">
 	<tr>
