--- a/src/main/resources/templates/add_movie.html
+++ b/src/main/resources/templates/add_movie.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <title>Rate Movie</title>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.7.0/font/bootstrap-icons.css}" />
+	<link th:rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 
+	<a href="/">Back to index</a>
 
+	<div class="form-group">
+	<form th:action="@{/savemovie}" th:object=${movie} method="POST" style="margin:20px">
+		<input th:if="${id != null}" type="hidden" th:field=*${id} readonly />
+		<label for="title">Title</label><br />
+		<input type="text" th:field="*{title}" placeholder="title" required /> <br />
+		<label for="year">Year</label><br />
+		<input type="number" min="1888" max="2500" step="1" th:field=*{year} />
+		<br />
+		<label for="length">Length</label><br />
+		<input type="number" placeholder="minutes" th:field=*{length} />
+		<br />
+		
+		<input type="checkbox" name="genres"
+		th:each="genre : ${genres}"
+		th:text="${genre.name}"
+		value="${genre.id}"
+		th:field="*{movieGenres}" />
+		<input type="submit" value="Save" /><br />
+	</form>
+	</div>
 
 </body>
 </html>
