--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.7.0/font/bootstrap-icons.css}" />
+	<link th:rel="stylesheet" th:href="@{/css/style.css}" />
+	
 <title>RateMovie - Genres</title>
 </head>
 <body>
+
+	<a href="/">Back to index</a><br /><br />
 
 	<a href="/addgenre"><button>Add New Genre</button></a>
 	<br /><br />
