added crossOrigin to restcontrollers

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,12 @@
 <body>
 
 	<nav>
-	<a href="/genres">Genres</a>
+	<a href="/genres" style="margin:15px; padding: 15px;">Genres</a>
 	<a href="/users">Users</a>
+	<a href="/logout" style="float: right; margin-right: 25px">Logout</a>
 	</nav>
 	
-	<a href="/addmovie"><button>Add Movie</button></a>
+	<a href="/addmovie"><button class="btn btn-success">Add Movie</button></a>
 
 	<table class="table">
 	<tr>
