--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,3 +11,40 @@ a:hover {
 	background-color: rbg(0, 0, 0);
 	cursor: pointer;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  
+}
+
+.grid-item1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding-top:10px;
+  padding-left:15px;
+}
+
+.grid-item2 {
+	text-align:right;
+	padding-top:10px;
+	padding-right:15px;
+}
+
+.grid-item2 form {
+	display: inline;
+}
+
+.grid-item3 {
+	grid-column-start: 1;
+  	grid-column-end: 4;
+  	padding-top:10px;
+	padding-left:15px;
+}
+
+.genrelist {
+	list-style-type:none;
+}
+
+
+
