--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,14 +12,14 @@
 	<a href="/">Back to index</a>
 	</nav>
 
-	<table style="margin:20px">
+	<table class="table table-bordered" style="margin:20px">
 		<tr>
 		<th>Username</th>
-		<th>Remove</th>
+		<th>Del</th>
 		</tr>
 		<tr th:each="user : ${users}">
 		<td th:text="${user.username}"></td>
-		<td><a th:href="@{/deleteuser/{id}(id=${user.userId})}"><button>Delete</button></a></td>
+		<td><a th:href="@{/deleteuser/{id}(id=${user.userId})}"><button class="btn btn-danger">Delete</button></a></td>
 		</tr>
 	</table>
 
