added custom error page and controller

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,9 +26,11 @@ a:hover {
 }
 
 .grid-item2 {
+	grid-column-start:3;
 	text-align:right;
 	padding-top:10px;
-	padding-right:15px;
+	padding-right:20px;
+	padding-bottom:15px;
 }
 
 .grid-item2 form {
