--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
 	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.7.0/font/bootstrap-icons.css}" />
@@ -29,16 +29,17 @@
 		</li>
 	</ul>
 		
-	<h2>Rate</h2>
-		
-	<form th:object=${rate} th:action="@{/rate}" action="#" method="POST">
-		<input type="hidden" th:field="*{movie}">
-		<input type="hidden" th:field="*{user.username}">
-		<input type="hidden" th:field="*{ratingId}" />
-		<input type="range" min="1" max="5" th:field="*{points}" /> <br />
-		<input type="text" placeholder="comment" maxlength="50" th:field="*{comment}" /> <br />
-		<input type="submit" value="Rate" />
-	</form>
+	<div sec:authorize="isAuthenticated()">
+	<h2>Rate</h2>	
+		<form th:object=${rate} th:action="@{/rate}" action="#" method="POST">
+			<input type="hidden" th:field="*{movie}">
+			<input type="hidden" th:field="*{user.username}">
+			<input type="hidden" th:field="*{ratingId}" />
+			<input type="range" min="1" max="5" th:field="*{points}" /> <br />
+			<input type="text" placeholder="comment" maxlength="50" th:field="*{comment}" /> <br />
+			<input type="submit" value="Rate" />
+		</form>
+	</div>
 	<br />
 	
 	<h2>Ratings</h2>
