--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 					<a href="./login"><button class="btn btn-dark">Login</button></a>
 				</div>
 			</div>
-			<div class="grid-item3" sec:authorize="hasAuthority('ADMIN')">
+			<div class="grid-item3" sec:authorize="hasAnyAuthority('ADMIN', 'MOD')">
 				<a href="/addmovie"><button class="btn btn-success">Add Movie</button></a>
 			</div>
 		</div>
