Added security details to controllers

--- a/src/main/resources/templates/add_movie.html
+++ b/src/main/resources/templates/add_movie.html
@@ -18,7 +18,7 @@
 		<label for="year">Year</label><br />
 		<input type="number" min="1888" max="2500" step="1" th:field=*{year} />
 		<br />
-		<label for="length">Length</label><br />
+		<label for="length">Length (mins)</label><br />
 		<input type="number" placeholder="minutes" th:field=*{length} />
 		<br />
 		<ul class="genrelist">
