--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 						<input class="btn btn-danger" type="submit" value="Logout"/>
 					</form>
 				</div>	
-				<div sec:authorize="!(isAuthenticated())">
+				<div sec:authorize="isAnonymous()">
 					<a href="./login"><button class="btn btn-dark">Login</button></a>
 				</div>
 			</div>
