--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,9 @@
 		<div class="grid-container">
 		
 			<div class="grid-item1" sec:authorize="hasAuthority('ADMIN')">
-				<a href="/genres"><button class="btn btn-secondary">Genres</button></a>
-				<a href="/users"><button class="btn btn-warning">Users</button></a>
+				<h2 class="grid-topic">Rate Movies</h2>
+				<a href="/genres"><button class="btn btn-secondary btn-sm">Genres</button></a>
+				<a href="/users"><button class="btn btn-warning btn-sm">Users</button></a>
 			</div>
 		
 			<div class="grid-item2">
