--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -11,7 +11,7 @@
 
 	<a href="/">Back to index</a><br /><br />
 
-	<a href="/addgenre"><button>Add New Genre</button></a>
+	<a href="/addgenre"><button class="btn btn-success btn-sm">Add New Genre</button></a>
 	<br /><br />
 	<table>
 		<tr>
@@ -20,7 +20,7 @@
 		</tr>
 		<tr th:each="genre : ${genres}">
 			<td th:text=${genre.name}></td>
-			<td><a th:href="@{/renamegenre/{id}(id=${genre.id})}"><button>Rename</button></a></td>
+			<td><a th:href="@{/renamegenre/{id}(id=${genre.id})}"><button class="btn btn-warning btn-sm">Rename</button></a></td>
 		</tr>
 	</table>
 	
